Fix margin above annotation-link and improve annotation-quote letter spacing and font-size. (#3308)

--- a/h/static/styles/markdown.scss
+++ b/h/static/styles/markdown.scss
@@ -56,6 +56,6 @@
   // Remove additional margin-bottom added by the last p within
   // the annotation-body
   p:last-child {
-    margin-bottom: 0;
+    margin-bottom: 1px;
   }
 }
